# polygon_coverage_planning

./: .gitignore  BCD4.m  CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml  setup.py
polygon_coverage_benchmark/: CMakeLists.txt  package.xml  setup.py
polygon_coverage_benchmark/python/polygon_coverage_benchmark/: plot_results.py
polygon_coverage_benchmark/scripts/: plot_results
polygon_coverage_benchmark/test/: benchmark-test.cpp
polygon_coverage_geometry/: BCD4.m  CMakeLists.txt  README.md  package.xml
polygon_coverage_geometry/include/mav_2d_coverage_planning/geometry/: bcd_exact.h  plane_transformation.h  polygon.h  sweep.h  weakly_monotone.h
polygon_coverage_geometry/include/mav_2d_coverage_planning/graphs/: visibility_graph.h
polygon_coverage_geometry/include/mav_2d_coverage_planning/sensor_models/: frustum.h  line.h
polygon_coverage_geometry/include/polygon_coverage_geometry/: bcd.h  boolean.h  cgal_comm.h  cgal_definitions.h  circular_segments.h  decomposition.h  offset.h  plane_transformation.h  pwh_indicator.h  sweep.h  tcd.h  test_comm.h  triangulation.h  visibility_graph.h  visibility_polygon.h  weakly_monotone.h
polygon_coverage_geometry/src/: bcd.cc  boolean.cc  cgal_comm.cc  circular_segments.cc  decomposition.cc  offset.cc  sweep.cc  tcd.cc  triangulation.cc  visibility_graph.cc  visibility_polygon.cc  weakly_monotone.cc
polygon_coverage_geometry/src/geometry/: BCD.cpp  polygon.cc  polygon_triangulation.cc  sweep.cc
polygon_coverage_geometry/src/graphs/: visibility_graph.cc
polygon_coverage_geometry/src/planners/: polygon_stripmap_planner.cc  polygon_stripmap_planner_exact.cc
polygon_coverage_geometry/test/: bcd-test.cpp  cgal_comm-test.cpp  offset-test.cpp  plane_transformation-test.cpp  planners-test.cpp  polygon-test.cpp  sweep-test.cpp  visibility_graph-test.cpp  visibility_polygon-test.cpp
polygon_coverage_msgs/: CMakeLists.txt  package.xml
polygon_coverage_msgs/include/polygon_coverage_msgs/: conversion.h  msg_from_xml_rpc.h
polygon_coverage_msgs/msg/: PolygonWithHoles.msg  PolygonWithHolesStamped.msg
polygon_coverage_msgs/src/: conversion.cc  msg_from_xml_rpc.cc
polygon_coverage_msgs/srv/: PlannerService.srv  PolygonService.srv
polygon_coverage_planners/: CMakeLists.txt  README.md  package.xml  visibility_graph-test.cpp
polygon_coverage_planners/include/polygon_coverage_planners/: timing.h
polygon_coverage_planners/src/: timing.cc
polygon_coverage_planners/src/cost_functions/: path_cost_functions.cc
polygon_coverage_planners/src/graphs/: gtspp_product_graph.cc  sweep_plan_graph.cc
polygon_coverage_planners/src/planners/: polygon_stripmap_planner.cc  polygon_stripmap_planner_exact.cc  polygon_stripmap_planner_exact_preprocessed.cc
polygon_coverage_planners/test/: planners-test.cpp
polygon_coverage_ros/: CMakeLists.txt  README.md  package.xml
polygon_coverage_ros/cfg/: base_planner.yaml  base_planner_2d.yaml  coverage_planner.yaml  example_polygon_convex.yaml  example_polygon_epfl.yaml  example_polygon_forest.yaml  example_polygon_iros.yaml  example_polygon_no_holes.yaml  example_polygon_soccer_field.yaml  example_rectangle.yaml  example_rectangle_with_hole.yaml  rviz_2d_stripmap.rviz  rviz_iros_decomposition.rviz  rviz_iros_permutation.rviz  rviz_iros_shortest_path.rviz  rviz_test_polygon_sweep_planning.rviz  shortest_path_planner.yaml  square.yaml
polygon_coverage_ros/cfg/polygons/: example_l.yaml  example_polygon.yaml  example_polygon_bcd_cell.yaml  example_polygon_epfl.yaml  example_polygon_epfl_simple.yaml  example_polygon_epfl_trivial.yaml  example_polygon_piombino.yaml  example_polygon_piombino_diamond.yaml  example_rectangle_with_hole.yaml  shiraishi.yaml
polygon_coverage_ros/cfg/rviz/: coverage_planner.rviz  coverage_planner_satellite.rviz  home.gps  rviz_shortest_path.rviz  shortest_path.rviz  sweep_test.rviz  test_polygon_sweep_planning.rviz
polygon_coverage_ros/include/polygon_coverage_ros/: coverage_planner.h  polygon_planner_base.h  ros_interface.h  shortest_path_planner.h
polygon_coverage_ros/launch/: coverage_planner.launch  coverage_planner_satellite.launch  shortest_path_planner.launch  shortest_path_planner_2d.launch  stripmap_planner_3d.launch  sweep_test.launch
polygon_coverage_ros/src/: base_planner.cc  coverage_planner.cc  coverage_planner_exact_node.cc  coverage_planner_exact_preprocessed_node.cc  coverage_planner_node.cc  polygon_planner_base.cc  ros_interface.cc  shortest_path_planner.cc  shortest_path_planner_node.cc
polygon_coverage_ros/src/conversions/: ros_interface.cc
polygon_coverage_ros/src/nodes/: base_planner.cc
polygon_coverage_ros/test/: benchmark-test.cpp  sweep_test_node.cc  test_polygon_sweep_planning.cc
polygon_coverage_solvers/: CMakeLists.txt  README.md  package.xml
polygon_coverage_solvers/include/mav_coverage_graph_solvers/: combinatorics.h
polygon_coverage_solvers/include/polygon_coverage_solvers/: boolean_lattice.h  combinatorics.h  gk_ma.h  glkh.h  graph_base.h  utils.h
polygon_coverage_solvers/patches/: Algorithm.patch  CMakeLists.txt  ClusterOptimisationCpp.patch  ClusterOptimisationH.patch  Generation.patch  GeneticAlgorithm.patch  Helper.patch  InsertCpp.patch  InsertH.patch  MakefileCpp  MakefileCs  NativeHelper.patch  NativeHelperCpp.patch  NativeHelperH.patch  OurSolver.patch  Permutation.patch  Program.patch  SolveTSP.patch  Solver.patch  SwapCpp.patch  Task.patch  Tour.patch  improvement_manager.patch
polygon_coverage_solvers/scripts/: run_glkh.bash
polygon_coverage_solvers/src/: boolean_lattice.cc  combinatorics.cc  gk_ma.cc  glkh.cc
polygon_coverage_solvers/src/native_helper/: ClusterOptimisation.cpp  ImprovementManager.cpp  Insert.cpp  KOpt.cpp  NativeHelper.cpp  Swap.cpp
polygon_coverage_solvers/test/: combinatorics-test.cpp  gk_ma-test.cpp  glkh-test.cpp
rviz_polygon_tool/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_polygon_tool/include/fm_rviz_polygon_tool/: polygon_tool.h
rviz_polygon_tool/include/rviz_polygon_tool/: polygon_tool.h
rviz_polygon_tool/src/: polygon_tool.cc
(+197 files in other folders)
