<?xml version="1.0"?>
<package format="2">
  <name>mav_2d_coverage_planning</name>
  <version>0.0.0</version>
  <description>
    Pipeline to solve 3D coverage planning problems.
  </description>
  <author>Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cgal_catkin</depend>
  <depend>mav_coverage_planning_comm</depend>
  <depend>glog_catkin</depend>

</package>
