<?xml version="1.0"?>
<package format="2">
  <name>mav_coverage_planning_ros</name>
  <version>0.0.0</version>
  <description>
    A ROS interface for MAV coverage planner.
  </description>
  <author>Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>

  <depend>mav_planning_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>mav_visualization</depend>
  <depend>std_srvs</depend>

  <depend>minkindr_conversions</depend>
  <depend>eigen_conversions</depend>

  <depend>mav_trajectory_generation_ros</depend>

  <depend>mav_2d_coverage_planning</depend>
  <depend>mav_3d_coverage_planning</depend>
  <depend>mav_coverage_planning_comm</depend>

</package>
