<?xml version="1.0"?>
<package format="2">
  <name>mav_2d_coverage_planning_benchmark</name>
  <version>0.0.0</version>
  <description>Benchmark to test coverage planning.</description>

  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>
  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>
</package>
