<?xml version="1.0"?>
<package format="2">
  <name>polygon_coverage_benchmark</name>
  <version>0.0.0</version>
  <description>Benchmark to test coverage planning.</description>

  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>polygon_coverage_msgs</depend>
  <depend>polygon_coverage_geometry</depend>
  <depend>polygon_coverage_planners</depend>
</package>
