<?xml version="1.0"?>
<package format="2">
  <name>polygon_coverage_msgs</name>
  <version>3.3.2</version>
  <description>
    Messages specific to polygon coverage planning.
  </description>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>
  <author>Rik Bähnemann</author>

  <license>GPL</license>

  <url type="website">https://github.com/ethz-asl/polygon_coverage_planning</url>
  <url type="bugtracker">https://github.com/ethz-asl/polygon_coverage_planning/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>xmlrpcpp</depend>
  <depend>polygon_coverage_geometry</depend>
</package>
