<?xml version="1.0"?>
<package format="2">
  <name>polygon_coverage_planners</name>
  <version>0.0.0</version>
  <description>
    Pipelines to solve 2D coverage planning problems.
  </description>
  <author>Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rosconsole</depend>
  <depend>roslib</depend>

  <depend>polygon_coverage_solvers</depend>
  <depend>polygon_coverage_geometry</depend>

</package>
