<?xml version="1.0"?>
<package format="2">
  <name>polygon_coverage_ros</name>
  <version>0.0.0</version>
  <description>
    A ROS interface for polygon coverage planning.
  </description>
  <author>Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>eigen_conversions</depend>

  <depend>polygon_coverage_msgs</depend>
  <depend>polygon_coverage_geometry</depend>
  <depend>polygon_coverage_planners</depend>
  <depend>cgal_catkin</depend>

  <exec_depend>rviz_polygon_tool</exec_depend>

</package>
